# Syntax-backend

./: README.md
Syntax/: .env.example  .gitignore  Dockerfile  compose.yml  pyproject.toml  requirements.txt
Syntax/Accounts/: admin.py  models.py  urls.py
Syntax/Accounts/api/: schema_docs.py  serializers.py  utils.py  views.py
Syntax/Config/: asgi.py  settings.py  throttles.py  urls.py
Syntax/Config/settings/: __init__.py  base.py  development.py  production.py
Syntax/Config/settings/components/: cors.py  csp.py  database.py  email.py  rest_framework.py  simple_jwt.py
Syntax/Posts/: admin.py  models.py
Syntax/Requirements/: requirements.in  requirements.txt
Syntax/Search/: urls.py
Syntax/Search/api/: filters.py  serializers.py  views.py
Syntax/Utils/: exception_handler.py
Syntax/accounts/: admin.py  models.py  otp_services.py  urls.py
Syntax/accounts/api/: serializers.py  utils.py  validations.py  views.py
Syntax/accounts/migrations/: 0001_initial.py  0002_remove_user_comments_count_alter_user_gender.py
Syntax/apps/Tests/test_accounts/: test_models.py
Syntax/apps/Utils/room/: valations_file.py
Syntax/apps/Utils/search/: searchutils.py
Syntax/apps/rooms/: admin.py  models.py  serializers.py  urls.py  views.py
Syntax/apps/rooms/repositories/: room_repo.py
Syntax/apps/rooms/services/: room_service.py
Syntax/apps/schema/search/: schema_docs.py
Syntax/apps/schema/user/: schema_docs.py
Syntax/apps/search/: filters.py  serializers.py  urls.py  validations.py  views.py
Syntax/apps/search/repositories/: user_search.py
Syntax/apps/search/services/: user_search.py
Syntax/apps/users/: admin.py  models.py  serializers.py  urls.py  views.py
Syntax/apps/users/repositories/: user_repo.py
Syntax/apps/users/services/: user_service.py
Syntax/posts/: models.py
Syntax/posts/migrations/: 0001_initial.py
Syntax/tests/test_accounts/: test_models.py
(+1 files in other folders)
