[project]
name = "syntax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "asgiref==3.8.1",
    "django==4.2",
    "django-cors-headers>=4.7.0",
    "django-phonenumber-field[phonenumbers]>=8.0.0",
    "djangorestframework==3.15.2",
    "djangorestframework-simplejwt>=5.4.0",
    "drf-spectacular[sidecar]>=0.28.0",
    "environ==1.0",
    "gunicorn>=23.0.0",
    "jdatetime>=5.2.0",
    "psycopg[c]>=3.2.5",
    "python-dotenv==1.0.1",
    "requests>=2.32.3",
    "sqlparse==0.5.3",
    "typing-extensions==4.12.2",
    "tzdata==2025.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-django>=4.10.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "Config.settings"


